variables.RunFour.scala.error
Compilation error:
RunFour:3: error: not found: value foward
  foward()
  ^RunFour:5: error: reassignment to val
    Nombre = Nombre+1
           ^