variables.RunFour.scala.code
val Nombre: Int =0
while (Nombre!=4) {
  foward()
  if (isOverBaggle()){
    Nombre = Nombre+1
  }
}